Font-size fix & letter-spacing add and active state result.

--- a/src/atom_components/counter/index.less
+++ b/src/atom_components/counter/index.less
@@ -8,6 +8,7 @@
 }
 
 .normal {
+  font-family: SimSun,"Arial Narrow",HELVETICA;
   border: 1px solid @borderColor;
   border-top-left-radius: 3px;
   border-bottom-left-radius: 3px;
@@ -18,7 +19,8 @@
   border-right: 1px solid @borderColor;
   width: 113px;
   background-color: #eeeeee;
-  font-size: 12px;
+  font-size: 16px;
+  font-weight: 700;
   padding-left: 8px;
   text-align: left;
   box-sizing: border-box;
@@ -54,7 +56,7 @@
       outline: none;
       width: 100%;
       border: 0;
-      font-size: 14px;
+      font-size: 20px;
       height: 38px;
       padding: 8px 4px;
       box-sizing: border-box;
