--- a/src/atom_components/number_keyboard/index.less
+++ b/src/atom_components/number_keyboard/index.less
@@ -16,10 +16,12 @@
 }
 
 .inputResult {
-  font-size: 31px;
+  font-size: 42px;
+  font-weight: 900;
   color: #000000;
   height: 90px;
   line-height: 90px;
+  letter-spacing: 4px;
   background-color: #e0e0e0;
   background: linear-gradient(180deg, #e0e0e0, #f0f0f0 30%, #eeeeee);
 }
@@ -35,17 +37,24 @@
 }
 
 .keyboardCol {
-  font-size: 36px;
-  background-color: #9ea6b3;
-  color: #ffffff;
+  @keyboardColBgColor: #9ea6b3;
+  @keyboardColColor: #ffffff;
+  font-size: 46px;
+  background-color: @keyboardColBgColor;
+  color: @keyboardColColor;
   height: 80px;
   border-top: 1px solid #ffffff;
   border-right: 1px solid #ffffff;
   &:last-child {
     border-right: 0;
   }
+  &:active {
+    color: darken(@keyboardColColor, 10%);
+    background-color: lighten(@keyboardColBgColor, 10%);
+  }
 }
 
 .keyboardDelete {
-  font-size: 22px;
+  font-size: 30px;
+  letter-spacing: 1px;
 }
